[package]
name = "tod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.3.8", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = { version = "0.23.0", features = ["all-widgets"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
rexpect = "0.5.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.5"
tui-input = "0.8.0"
uuid = { version = "1.4.0", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
wiremock = "0.5.19"
