[package]
name = "todoist-tui"
authors = ["Drew Zemke"]
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A Todoist TUI and CLI app."
repository = "https://github.com/drewzemke/todoist-tui"
readme = "README.md"

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.3.8", features = ["derive"] }
crossterm = "0.27.0"
dirs = "5.0.1"
ratatui = { version = "0.26", features = ["all-widgets"] }
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
smart-date = { git = "https://github.com/drewzemke/smart-date.git", version = "0.1.1" }
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.5"
tui-input = "0.8.0"
tui-scrollview = "0.3.1"
tui-tree-widget = "0.17.0"
uuid = { version = "1.4.0", features = ["v4", "serde"] }

[dev-dependencies]
assert_cmd = "2.0.11"
assert_fs = "1.0.13"
predicates = "3.0.3"
rexpect = "0.5.0"
wiremock = "0.5.19"
